# deforestation-monitoring

./: .gitignore  Makefile  README.md  docker-compose.yml
ai-models/: README.md  requirements.txt  setup_data.py
ai-models/inference/: predict.py
ai-models/models/: __init__.py  hotspot_prediction.py  inference.py  preprocessing.py  training.py  unet.py
ai-models/training/: train.py
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: infer.py  model.py  preprocessing.py
backend/app/api/: dependencies.py
backend/app/api/routers/: predict.py
backend/app/api/routes/: alerts.py  analysis.py  predictions.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  deforestation.py  models.py
backend/app/schemas/: __init__.py  deforestation.py
backend/migrations/: env.py
backend/scripts/: seed_db.py
backend/tests/: test_api.py
frontend/: .env.example  .gitignore  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/map/: page.tsx
frontend/src/components/: AlertsList.tsx  Analytics.tsx  Dashboard.tsx  DynamicMap.tsx  Header.tsx  Map.tsx  Sidebar.tsx  index.ts
frontend/src/hooks/: index.ts  useAlerts.ts  useAnalysis.ts  usePredictions.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts
